# skin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-PostgreSQL  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: devskim.yml  osv-scanner.yml  rust-clippy.yml
docs/: Chapter-01.md  Chapter-02.md  Chapter-03.md  Chapter-04.md  Index.md
rskin/: Cargo.toml
rskin/src/: cli.rs  config.rs  lib.rs
rskin/src/helper/: activate.rs  disactivate.rs  mod.rs  status.rs
rskin/src/modules/: command.rs  mod.rs
rskin/src/skinners/: external.rs  l.rs  r.rs  x.rs
rskin/tests/: test_command_module.rs
skin-builder/: Cargo.toml
skin-builder/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
skin-builder/src/installer/: mod.rs
skin-builder/src/makefile/: actions.rs  mod.rs
skin-builder/src/validator/: mod.rs
src/: args.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs
src/helper/: activate.rs  disactivate.rs  mod.rs  run.rs  status.rs
src/modules/: command.rs  db.rs
src/modules/db_modules/: query.rs  schema.sql
src/skinners/: external.rs  mod.rs  r.rs
tests/: test_command_module.rs
