[package]
name = "skin-builder"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
reqwest = "0.12.5"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.2"
color-print = "0.3.6"
regex = "1.10.5"
tempfile = "3.10.1"
