[package]
name = "skin-builder"
version = "1.0.4"
description = "A tool for installing external skinners"
authors = ["Naxeion <naxeion@startmail.com>"]
repository = "https://github.com/naxeion/skin"
edition = "2021"
readme = "../README.md"
documentation = "https://github.com/naxeion/skin/blob/master/docs/Index.md"
license = "BSD-3-Clause AND PostgreSQL"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
reqwest = "0.12.5"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.2"
color-print = "0.3.6"
regex = "1.10.5"
tempfile = "3.10.1"
shellexpand = "3.1.0"
libc = "0.2.155"
